# mam

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: tests.yml
doc/: Doxyfile  Makefile  f90_mod_deps.py  index.html
doc/doxygen_files/: code_structure.F90
doc/doxygen_files/images/: mam-class-diagram.html  mam-radiation-workflow-initialization.html  mam-radiation-workflow-runtime.html
doxygen_files/: header.html  mainpage.F90
html/: annotated.html  classes.html  code__structure_8F90.html  code__structure_8F90_source.html  code_structure.html  constants_8F90.html  constants_8F90_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6a07fdbc4b50e86806a88566ca8f66e4.html  dir_b4a6d9de55b89407938343c0ef020b02.html  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  mainpage_8F90.html  mainpage_8F90_source.html  menudata.js  namespacemam__constants.html  namespacemam__core.html  namespacemam__mode.html  namespacemam__optics__lookup.html  namespacemam__optics__util.html  namespacemam__species.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  pages.html  src_2core_8F90.html  src_2core_8F90_source.html  src_2mode_8F90.html  src_2mode_8F90_source.html  src_2optics__lookup_8F90.html  (+30 more)
html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  (+17 more)
latex/: annotated.tex  code__structure_8F90.tex  code__structure_8F90_source.tex  code_structure.tex  constants_8F90.tex  constants_8F90_source.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_6a07fdbc4b50e86806a88566ca8f66e4.tex  dir_b4a6d9de55b89407938343c0ef020b02.tex  files.tex  hierarchy.tex  index.tex  mainpage_8F90.tex  mainpage_8F90_source.tex  namespacemam__constants.tex  namespacemam__core.tex  namespacemam__mode.tex  namespacemam__optics__lookup.tex  namespacemam__optics__util.tex  namespacemam__species.tex  namespaces.tex  refman.tex  src_2core_8F90.tex  src_2core_8F90_source.tex  src_2mode_8F90.tex  src_2mode_8F90_source.tex  src_2optics__lookup_8F90.tex  src_2optics__lookup_8F90_source.tex  src_2optics__util_8F90.tex  src_2optics__util_8F90_source.tex  src_2species_8F90.tex  src_2species_8F90_source.tex  structmam__core_1_1core__t.eps  structmam__core_1_1core__t.tex  structmam__core_1_1state__t.eps  structmam__core_1_1state__t.tex  structmam__mode_1_1mode__state__t.eps  structmam__mode_1_1mode__state__t.tex  structmam__mode_1_1mode__t.eps  (+15 more)
src/: CMakeLists.txt  constants.F90  core.F90  interpolator.F90  lookup_table_2D_1D.F90  mode.F90  mode_longwave_optics_lookup.F90  mode_shortwave_optics_lookup.F90  optics_accessor.F90  optics_constants.F90  optics_lookup.F90  optics_util.F90  species.F90
test/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/integration/current_cam/: CMakeLists.txt  atm_in  cam_abortutils_stubs.F90  cam_history_stubs.F90  cam_history_support_stubs.F90  cam_instance_stubs.F90  cam_logfile_stubs.F90  cam_map_utils.F90  constituents_stubs.F90  drv_in  foo_modelio.nml  mock_cam.F90  modal_aer_opt.F90  modal_aero_calcsize_stubs.F90  modal_aero_wateruptake_stubs.F90  mpishorthand.F  namelist_utils_stubs.F90  perf_mod_stubs.F90  phys_control_stubs.F90  phys_prop.F90  physconst_stubs.F90  physics_buffer_stubs.F90  physics_types_stubs.F90  ppgrid_stubs.F90  rad_constituents.F90  radconstants_stubs.F90  ref_pres_stubs.F90  run_current_cam.sh  scamMod_stubs.F90  shr_assert_mod_stubs.F90  shr_infnan_mod_stubs.F90  shr_log_mod_stubs.F90  shr_mpi_mod_stubs.F90  shr_pio_mod.F90  shr_scam_mod_stubs.F90  shr_string_mod.F90  shr_sys_mod_stubs.F90  shr_timer_mod_stubs.F90  spmd_utils_stubs.F90  test_utils.F90  (+2 more)
test/integration/current_cam/mam_data/: bcpho_rrtmg_c100508.nc  dust_aeronet_rrtmg_c141106.nc  iceoptics_c080917.nc  mam_config.json  mode1.nc  mode2.nc  mode3.nc  mode4.nc  ocphi_rrtmg_c100508.nc  ocpho_rrtmg_c130709.nc  ssam_rrtmg_c100508.nc  water_refindex_rrtmg_c080910.nc
test/integration/current_cam/new_mam_data/: mode1.nc  mode2.nc  mode3.nc  mode4.nc
test/integration/current_cam/pio2/src/clib/: pioc_support.c
test/integration/radiation/: CMakeLists.txt  mam_config.json  mock_host.F90  mock_radiation.F90  run_mock_radiation.sh
test/integration/radiation/mam_data/: SO4_optics.nc  hydrophobic_organics_optics.nc  mode1.nc  mode2.nc
test/unit/: CMakeLists.txt  core.F90  core_config.json  mock_interpolation_strategy.F90  mock_mode.F90  mock_optics_lookup.F90  mock_species.F90  mode.F90  mode_config.json  optics_lookup.F90  optics_lookup_a_config.json  optics_lookup_a_data.nc  optics_lookup_b_config.json  optics_lookup_b_data.nc  optics_lookup_c_config.json  optics_lookup_c_data.nc  optics_util.F90  species.F90  species_config.json  species_data.nc
test/unit/lookup_table_2D_1D/: CMakeLists.txt  file.cdl  lookup_2D_1D.ncf  run_lookup_table_2D_1D.sh  test_lookup_table_2D_1D.F90
